MB-5389: Handle ENGINE_TMPFAIL for process_bin_get

Change-Id: Ia4210bf36e6d154f086ed1a66e14362e13fb6fc4
Reviewed-on: http://review.couchbase.org/16469
Reviewed-by: Dustin Sallings <dustin@spy.net>
Tested-by: Trond Norbye <trond.norbye@gmail.com>